tests/globals/valid/global_not_initialized.su
s32 foo;

s32 main() {
    for (s32 i = 0; i < 3; i = i + 1)
        foo = foo + 1;
    return foo;
}