tests/globals/invalid/non_constant_init.su
s32 foo = 3;
s32 bar = foo + 1;

s32 main() {
    return bar;
}